services/api/service_templates/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  template:
    metadata:
      labels: 
        app: backend
    spec:
      containers: 
      - name: backend
        image: gcr.io/{GCP_PROJECT_NAME}/{IMAGE_REPO_NAME}:{IMAGE_NAME}
        ports:
        - containerPort: {CONTAINER_PORT}
        readinessProbe:
          httpGet:
            path: /
            port: {CONTAINER_PORT}
          initialDelaySeconds: 5
          periodSeconds: 5
        volumeMounts:
        - name: creds-volume
          mountPath: /etc/creds
          readOnly: true
      volumes:
          - name: creds-volume
            secret:
              secretName: gcp-creds
