services/api/service_templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: {TARGET_PORT}
    targetPort: {CONTAINER_PORT}
  selector:
    app: backend
